tdf#64830: Don’t require hunspell dictionary for every Arabic locale

For old-style hunspell dictionaries, if “ar” dictionary is found, add
the rest of Arabic locales for that dictionary’s aLocaleNames, so that
distributions don’t have to symlink the dictionary files.

This is similar to the fix for macOS spell checking in:

Author: Khaled Hosny <khaled@aliftype.com>
Date:   Tue Feb 7 21:29:12 2023 +0200

    tdf#153436: Improve handling of Arabic system spell dictionary on macOS

Change-Id: I96b23566cba7b345a10e10c10f1bfe02ce1f8cf3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152706
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>